# flama-examples

./: .gitignore  README.md  pyproject.toml
03-fundamentals/: 1-applications.py  2-routes.py  3-components.py  8-responses.py
03-fundamentals/schemas/: marshmallow_schemas.py  pydantic_schemas.py  typesystems_schemas.py
04-cli-commands/: 1-run.sh  2-serve.sh  3-start.sh  4-model.sh  5-get.sh  6-upgrade.sh
05-advanced-topics/: 1-config.py  2-debug.py  3-client.py  4-pagination.py  7-authentication.py
05-advanced-topics/8-testing/src/: app.py  models.py  schemas.py
05-advanced-topics/8-testing/src/migrations/: config.py
05-advanced-topics/8-testing/tests/: conftest.py
06-predictive-ai/: 1-packaging.py  2-add-models.py  3-model-resource.py  4-model-components.py  _test_ml_docs.py  build_models.py
07-generative-ai/: 1-overview.py  3-serving-llms.py  4-chatbot.py  5-mcp.py  _test_genai_docs.sh
08-domain-driven-design/: 3-repository.py  4-worker-http.py  6-full-app.py
advanced-topics/: 5-background.py  6-lifespan.py
advanced-topics/8-testing/: alembic.ini  pytest.ini
advanced-topics/8-testing/src/: config.py
advanced-topics/8-testing/src/migrations/: env.py
advanced-topics/8-testing/tests/: test_app.py
domain-driven-design/: 1-introduction.py  2-data-model.py  3-repository-http.py  4-worker.py  5-resources.py  _test_full_app.py
fundamentals/: 4-modules.py  5-middleware.py  6-endpoints.py  7-resources.py
ml-models/: 1-packaging.py  3-model-resource.py  4-model-components.py  _test_ml_docs.py  _test_ml_models.py  build_models.py
(+1 files in other folders)
