[project]
name = "flama-examples"
version = "1.0.0"
description = "Curated examples to showcase Flama's capabilities"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "aiosqlite>=0.22.1",
  "alembic>=1.18.4",
  "apispec>=6.8.2",
  "filelock>=3.24.3",
  "flama[client,pydantic]>=1.12.1",
  "greenlet>=3.3.0",
  "httpx-ws>=0.7.2",
  "marshmallow>=4.0.0",
  "psycopg[binary]>=3.3.3",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "pytest-xdist>=3.8.0",
  "sqlalchemy>=2.0.45",
  "typesystem>=0.4.1",
]
